First commit, bare app with nothing much changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -350,6 +350,10 @@
 
   </div>
 
+  <div>Ok here's where I'm going to build out my plex app stuff</div>
+
+  <button mat-raised-button color="primary" (click)="goToPort('32400/web')">This is my test button</button>
+
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
