--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ $plexpage-primary: mat.define-palette(mat.$indigo-palette);
 $plexpage-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 $plexpage-dark-primary: mat.define-palette(mat.$amber-palette);
-$plexpage-dark-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$plexpage-dark-accent: mat.define-palette(mat.$orange-palette, 500);
 
 // The warn palette is optional (defaults to red).
 $plexpage-warn: mat.define-palette(mat.$red-palette);
@@ -31,7 +31,7 @@ $plexpage-theme: mat.define-light-theme((
   )
 ));
 
-$plexpage-theme: mat.define-dark-theme((
+$plexpage-dark-theme: mat.define-dark-theme((
   color: (
     primary: $plexpage-dark-primary,
     accent: $plexpage-dark-accent,
@@ -42,7 +42,9 @@ $plexpage-theme: mat.define-dark-theme((
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($plexpage-theme);
+@include mat.all-component-themes($plexpage-dark-theme);
+@include mat.core-theme($plexpage-dark-theme);
+@include mat.button-theme($plexpage-dark-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
